# tauri-plugin-widget

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: WidgetBridePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-plugin-widget-example/: package.json  pnpm-lock.yaml
examples/tauri-plugin-widget-example/src/: App.css  App.tsx
examples/tauri-plugin-widget-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-plugin-widget-example/src-tauri/capabilities/: default.json
examples/tauri-plugin-widget-example/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: reload_all_time_lines.toml  reload_time_lines.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  model.rs
