[package]
name = "tauri-plugin-widget"
version = "0.1.2"
authors = [ "fwy13" ]
description = "A Tauri plugin to interact with App Widgets (Android). Allows your Tauri app to shared preferences (Android), and update timeline widgets."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-widget"
license = "MIT"
repository = "https://github.com/fwy13/tauri-plugin-widget"

[dependencies]
tauri = { version = "2.8.5" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0.145"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
